# CoordiPick

./: purpose.md
api/: openapi-admin.yaml  openapi-user.yaml
backend-admin/: pyproject.toml
backend-admin/app/: dependencies.py  main.py
backend-admin/app/api/routes/: admin.py
backend-admin/app/core/: auth.py  enums.py  errors.py
backend-admin/app/models/: admin.py
backend-admin/app/repositories/: memory.py
backend-admin/app/services/: admin_service.py
backend-admin/migrations/: 0001_admin_schema.sql
backend-admin/tests/: conftest.py  test_admin_api.py
backend-user/: pyproject.toml
backend-user/app/: main.py
backend-user/app/api/: router.py
backend-user/app/api/routes/: events.py  recommendations.py
backend-user/app/core/: errors.py
backend-user/app/models/: api.py  domain.py
backend-user/app/recommendation/: candidate.py  compose.py  rerank.py  scoring.py
backend-user/app/repositories/: catalog_repository.py  event_repository.py  recommendation_repository.py
backend-user/app/services/: dependencies.py  event_service.py  recommendation_service.py
backend-user/tests/: conftest.py  test_events.py  test_recommendations.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  DB_SCHEMA.md  ORCHESTRATION_RUNBOOK.md  SUBAGENT_EXECUTION.md
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/src/: app.dart
frontend/lib/src/api/: admin_api_client.dart  user_api_client.dart
frontend/lib/src/models/: user_models.dart
prompts/: agent-backend-admin-prompt.md  agent-backend-user-prompt.md  agent-frontend-prompt.md
(+4 files in other folders)
